--- a/pages/menu_3.html
+++ b/pages/menu_3.html
@@ -32,10 +32,15 @@
                     <div class="menu-titre">
                         <h1>Le délice des sens</h1>
                         <div class="heart-btn">
-                            <label class="container-like">
+                            <!--<label class="container-like">
                                 <input type="checkbox" />
                                 <span class="like"></span>
-                            </label>
+                            </label>  -->
+                            <span class="like">
+                                <img class="likeimg" src="../assets/images/heart/like.png">
+                                <img class="likedimg" src="../assets/images/heart/liked.png">
+
+                            </span>
                         </div>
                     </div>
                     
