--- a/pages/menu_4.html
+++ b/pages/menu_4.html
@@ -32,10 +32,11 @@
                     <div class="menu-titre">
                         <h1 class="fontSpecial">À la française</h1>
                         <div class="heart-btn">
-                            <label class="container-like">
-                                <input type="checkbox" />
-                                <span class="like"></span>
-                            </label>
+                            <span class="like">
+                                <img class="likeimg" src="../assets/images/heart/like.png">
+                                <img class="likedimg" src="../assets/images/heart/liked.png">
+
+                            </span>
                         </div>
                     </div>
                 </div>
